--- a/public/stylesheets/meetting_show.css
+++ b/public/stylesheets/meetting_show.css
@@ -86,10 +86,11 @@
     height: 200px;
     border: 1px solid #e1e1e1;
     background-color: #f5f5f5;
-    text-indent: 20px;
     font-family: 'NST';
     font-size: 16px;
     margin-left: 120px;
+    resize: none;
+    padding: 20px 20px 20px 20px;
 }
 
 .fa.fa-map-marker{
