--- a/views/meetings/show.ejs
+++ b/views/meetings/show.ejs
@@ -64,7 +64,7 @@
         <seciont class="meeting_show_content">
             <div class="text">
                 <h2>모임 내용</h2>
-                <textarea class="text_content"><%=location[0].text%></textarea>
+                <textarea class="text_content" disabled ><%=location[0].text%></textarea>
             </div>
         </seciont>
     </div>
