--- a/views/meetings/main.ejs
+++ b/views/meetings/main.ejs
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<% include ../header.ejs %>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/meetting_show.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/meetting.css">
     <script src="//code.jquery.com/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -53,7 +53,7 @@
 	<br><br><br><br><br><br>
 <div class="meeting_header">
     <div class="inner">
-        <div id="map"></div>
+        <div id="map" class="main_map"></div>
     </div>
 </div>
 	<div id="temp"></div>
