--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -13,9 +13,23 @@
 <body>
 <% include ../body.ejs %>
 <div id="container">
-    <div class="inner">
+    <div class="inner main_inner">
         <section class="post_show_header">
             <h1><%=post[0].title %></h1>
+            <div class="author-area">
+                <div class="user-area">
+                    <img class="user-tumb" src="/imgs/user/<%=post[0].user[0].img%>">
+                    <strong class="user-ID"><%=post[0].user[0].name%></strong>
+                </div>
+                <div class="user-link">
+                    <input class="link-btn" type="button" value="작성자의 다른 레시피 보러가기"></input>
+                    <input class="link-btn" type="button" value="작성자의 다른 레시피 보러가기"></input>
+                </div>
+                <div class="btn-area">
+                    <input class="link-btn" type="button" value="수정"></input>
+                    <input class="link-btn" type="button" value="삭제"></input>
+                </div>
+            </div>
             <div class="time-area">
                 <label><i class="fa fa-clock-o" aria-hidden="true"></i>조리시간</label>
                 <span class="time"><%=post[0].cookTime %>min</span>
