--- a/public/stylesheets/meetting.css
+++ b/public/stylesheets/meetting.css
@@ -82,6 +82,14 @@ input[type=time]::-webkit-inner-spin-button{
     width: 600px;
     height: 300px;
 }
+
+#map.main_map{
+    margin: 20 0 20 0px;
+    width: 1014px;
+    height: 400px;
+    border: 5px solid orange;
+}
+
 #address{
     width: 600px;
 }
