--- a/views/meetings/show.ejs
+++ b/views/meetings/show.ejs
@@ -74,6 +74,7 @@
                     <textarea class="text_content" disabled ><%=location[0].text%></textarea>
                 </div>
             </seciont>
+            <% include ../reply.ejs%>
         </div>
     </div>
 </div>
