--- a/views/posts/list.ejs
+++ b/views/posts/list.ejs
@@ -32,11 +32,11 @@
                             <a class="recipe tumb" href="/posts/show/<%=list[i]._id %>">
                                 <img src="/imgs/user/<%=list[i].recipe[0].img %>">
                             </a>
-                            <span class="difficulty">
+                            <span class="difficulty text_shadow">
                       난이도
                       <strong><%=list[i].diff %></strong>
                     </span>
-                            <span class="flavor">
+                            <span class="flavor text_shadow">
                       맛
                       <strong><%=list[i].taste %></strong>
                     </span>
