--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -67,6 +67,7 @@
             <% } %>
         </section>
         <% } %>
+        <% include ../reply.ejs%>
     </div>
 </div>
 <% include ../footer.ejs %>
