--- a/views/reply.ejs
+++ b/views/reply.ejs
@@ -1,25 +1,22 @@
 <h2>한줄댓글</h2>
 <link rel="stylesheet" type="text/css" href="/stylesheets/reply.css">
 <section class="reply">
-    <form class="box_write" id="new_comment" action="" accept-charset="UTF-8" method="post">
+    <form class="box_write" id="new_comment" action="/reple/new" accept-charset="UTF-8" method="post">
         <textarea placeholder="한 줄 댓글을 남겨주세요." name="comment[comment]" id="comment_comment"></textarea>
         <button name="button" type="submit">댓글남기기</button>
     </form>
     <ul class="lst_comment">
+
+        <% for(i=0;i<reple.length;i++){ %>
         <li class="">
             <div class="img-cover">
-                <img class="img_user" src="http://d1hk7gw6lgygff.cloudfront.net/assets/_img/common/img_user_blank-a8d319e5cb44c0eb10daa11d798435fd.png" alt="Img user blank">
+                <img class="img_user" src="/imgs/user/<%=reple[i].user[0].img%>" alt="Img user blank">
             </div>
-            <strong>김용철</strong><time>2015-10-26</time>
-            <p>잘봤습니다.. ^^</p>
+            <strong><%=reple[i].user[0].name%></strong><time><%=reple[i].date%></time>
+            <p><%-reple[i].comment.replace(/\n/g,"<br>") %></p>
         </li>
-        <li class="">
-            <div class="img-cover">
-                <img class="img_user" src="http://cloudfront.haemukja.com/vh.php?url=http://d1hk7gw6lgygff.cloudfront.net/uploads/user/image_file/270793/thumb_1457891741624.jpg&amp;convert=jpgmin&amp;rt=600" alt="Thumb 1457891741624">
-            </div>
-            <strong>김숳</strong><time>2016-03-14</time>
-            <p>오븐없고 전자렌지만 있는 자취생인데
-                렌지에 돌려도 되겠죠?</p>
-        </li>
+        <% } %>
+        
+
     </ul>
 </section>
