지도 썸네일 디자인 및 모임 검색기능

--- a/public/stylesheets/meetting.css
+++ b/public/stylesheets/meetting.css
@@ -155,3 +155,70 @@ input[type=time]::-webkit-inner-spin-button{
     width:220px;
     height:220px;
 }
+
+.map_spot_info{
+    display: inline-block;
+}
+
+.map_spot_container{
+    width: 260px;
+}
+
+.map_spot_container li{
+    text-align: left;
+}
+
+.map_spot_container li strong{
+    position: relative;
+    top: -10px;
+    margin-left: 5px;
+}
+
+.map_spot_info label{
+    margin-right: 10px;
+}
+
+.map_spot_img {
+    float: right;
+}
+
+.map_user_img {
+    border-radius: 50%;
+    margin-top: 10px;
+}
+
+.map_spot_btn{
+    display: inline-block;
+    float: left;
+    border: 2px solid #dddddd;
+    background: #ff6d00;
+    color: #ffffff;
+    cursor: pointer;
+    height: auto;
+    padding: 5px;
+    border-radius: 10px;
+}
+
+
+.meetting_search{
+    margin: 20px;
+    display: block;
+    text-align: center;
+}
+
+.meetting_search select{
+    border: 1px solid #e6e6e6;
+    height: 40px;
+}
+
+.meetting_search input{
+    height: 35px;
+    width: 300px;
+    border: 1px solid #e6e6e6;
+}
+
+.meetting_search button{
+    height: 40px;
+    width: 50px;
+    border: 1px solid #e6e6e6;
+}
