--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,11 +36,11 @@
                       <a class="recipe tumb" href="/posts/show/<%=taste[i]._id %>">
                           <img src="/imgs/user/<%=taste[i].recipe[0].img %>">
                       </a>
-                      <span class="difficulty">
+                      <span class="difficulty text_shadow">
                 난이도
                 <strong><%=taste[i].diff %></strong>
               </span>
-                      <span class="flavor">
+                      <span class="flavor text_shadow">
                 맛
                 <strong><%=taste[i].taste %></strong>
               </span>
@@ -82,11 +82,11 @@
                       <a class="recipe tumb" href="/posts/show/<%=diff[i]._id %>">
                           <img src="/imgs/user/<%=diff[i].recipe[0].img %>">
                       </a>
-                      <span class="difficulty">
+                      <span class="difficulty text_shadow">
                 난이도
                 <strong><%=diff[i].diff %></strong>
               </span>
-                      <span class="flavor">
+                      <span class="flavor text_shadow">
                 맛
                 <strong><%=diff[i].taste %></strong>
               </span>
