--- a/public/stylesheets/meetting.css
+++ b/public/stylesheets/meetting.css
@@ -222,3 +222,7 @@ input[type=time]::-webkit-inner-spin-button{
     width: 50px;
     border: 1px solid #e6e6e6;
 }
+
+h1{
+    font-size: 40px;
+}
