--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -4,7 +4,72 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/post_show.css">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="http://malsup.github.com/jquery.form.js"></script>
-    <% include ../reple_head.ejs %>
+    <script>
+        $(document).ready(function(){
+            var session=<%-JSON.stringify(session)%>;
+            var post=<%-JSON.stringify(post)%>;
+            $('#new_comment').submit(function(event){
+                event.preventDefault();
+                if(!session){
+                    alert('로그인이 필요합니다');
+                }
+                else{
+                    var title=post[0].title;
+                    var email=session.email;
+              var comment=$('textarea#comment_comment').first().val();
+
+              if(comment==""){
+                alert('내용을 입력해주세요');
+              }
+              else{
+                $.ajax({
+                  url:'/reple/new',
+                  dataType:'json',
+                  type:'POST',
+                  data:{
+                    'title':title,
+                    'email':email,
+                    'comment':comment
+                  },
+                  success:function(result){
+                    if(result['err']==0){
+                      var new_reple=$('<li></li>').addClass("");
+                      new_reple.append($('<div></div>').addClass("img-cover"));
+                      new_reple.children('div').first().append($('<img />').addClass("img_user").attr('src','/imgs/user/'+session.img).attr('alt','Img user blank'));
+                      new_reple.append($('<strong></strong>').text(session.name));
+                      new_reple.append($('<time></time>').text(result['date']));
+                      new_reple.append($('<p></p>').text(result['comment']));
+
+                      $('ul.lst_comment').append(new_reple);
+                      $('textarea#comment_comment').first().val("");
+                    }
+                  }
+                });
+              }
+                }
+        });
+
+        $('input#delete_post').click(function(event){
+            event.preventDefault();
+            if(!session){
+                location.href="/";
+            }
+            else{
+                $.ajax({
+                    url:'/posts/del/'+post[0]._id,
+                    dataType:'json',
+                    type:'DELETE',
+                    success:function(result){
+                        if(result['err']==0){
+                            alert("삭제되었습니다");
+                            location.href='/';
+                        }
+                    }
+                });
+            }
+        });
+        });
+    </script>
 </head>
 <body>
 <% include ../body.ejs %>
@@ -20,14 +85,15 @@
                 <div class="user-link">
                     <a href="/posts/search/author/<%=post[0].user[0]._id%>">
                     <input class="link-btn" type="button" value="작성자의 다른 레시피 보러가기"></input></a>
-                    <input class="link-btn" type="button" value="작성자의 다른 레시피 보러가기"></input>
+                    <a href="/meetings/search/author/<%=post[0].user[0]._id%>"
+                    <input class="link-btn" type="button" value="작성자의 다른 모임 보러가기"></input></a>
                 </div>
                 <% if(session){ %>
                 <% if(post[0].user[0].email==session.email){ %>
                 <div class="btn-area">
                     <a href="/posts/edit/<%=post[0]._id%>">
                     <input class="link-btn" type="button" value="수정"></input></a>
-                    <input class="link-btn" type="button" value="삭제"></input>
+                    <input class="link-btn" type="button" id="delete_post" value="삭제"></input>
                 </div>
                 <% }} %>
             </div>
