--- a/views/meetings/main.ejs
+++ b/views/meetings/main.ejs
@@ -64,7 +64,7 @@
 	<br><br><br><br><br><br>
 <div class="meeting_header">
     <div class="inner">
-        <h1>함께하고 싶은사람 모여라</h1>
+        <h1><i class="fa fa-users" aria-hidden="true"></i>함께하고 싶은사람 모여라</h1>
         <div id="map" class="main_map"></div>
     </div>
 </div>
